--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Add source files
 file(GLOB SOURCES
         src/main.cpp
-        src/DrawableCell.cpp
-        src/DrawableTicTacToeBoard.cpp
+        src/drawable_cell.cpp
+        src/drawable_tic_tac_toe_board.cpp
 )
 
 add_executable(tictactoe ${SOURCES})
