Revert "rename file names"
This reverts commit e1974b4e9402d95b4ce93b05b9e71c897fb2df3c.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Add source files
 file(GLOB SOURCES
         src/main.cpp
-        src/drawable_cell.cpp
-        src/drawable_tic_tac_toe_board.cpp
+        src/DrawableCell.cpp
+        src/DrawableTicTacToeBoard.cpp
 )
 
 add_executable(tictactoe ${SOURCES})
